--- a/activity1.html
+++ b/activity1.html
@@ -6,6 +6,14 @@
     <title>JacaScript</title>
 </head>
 <body>
+    <header>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="activity1.html">Activity 1</a>
+            <a href="activity2.html">Activity 2</a>
+            <a href="activity3.html">Activity 3</a>
+        </nav>
+    </header>
     <h1>JS is cool!</h1>
     <p id="one">Yuh</p>
     <p>Open the console to see more...</p>
