--- a/activity2.html
+++ b/activity2.html
@@ -24,6 +24,14 @@
     </style>
 </head>
 <body>
+    <header>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="activity1.html">Activity 1</a>
+            <a href="activity2.html">Activity 2</a>
+            <a href="activity3.html">Activity 3</a>
+        </nav>
+    </header>
     <main>
         <h1>FOOD</h1>
         <section>
