--- a/activity3.html
+++ b/activity3.html
@@ -19,6 +19,14 @@
     </style>
 </head>
 <body>
+    <header>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="activity1.html">Activity 1</a>
+            <a href="activity2.html">Activity 2</a>
+            <a href="activity3.html">Activity 3</a>
+        </nav>
+    </header>
     <h1>MAD LIB</h1>
     <script>
         let name = prompt("Input a name");
